[package]
name = "scroll"
version = "0.8.1"
authors = ["m4b <m4b.github.io@gmail.com>"]
readme = "README.md"
keywords = ["bytes", "endian", "immutable", "pread", "pwrite"]
repository = "https://github.com/m4b/scroll"
license = "MIT"
documentation = "https://docs.rs/scroll"
description = "A suite of powerful, extensible, generic, endian-aware Read/Write traits for byte buffers"

[dependencies]
scroll_derive = { version = "0.8.1", optional = true }

[features]
default = ["std"]
std = []
derive = ["scroll_derive"]

[dev-dependencies]
rayon = "0.9.0"
byteorder = "1.0.0"
