[package]
name = "scroll"
version = "0.9.1"
authors = ["m4b <m4b.github.io@gmail.com>", "Ted Mielczarek <ted@mielczarek.org>"]
readme = "README.md"
keywords = ["bytes", "endian", "immutable", "pread", "pwrite"]
repository = "https://github.com/m4b/scroll"
license = "MIT"
documentation = "https://docs.rs/scroll"
description = "A suite of powerful, extensible, generic, endian-aware Read/Write traits for byte buffers"

[dependencies]
scroll_derive = { version = "0.9", optional = true }

[build-dependencies]
rustc_version = "0.2"

[features]
default = ["std"]
std = []
derive = ["scroll_derive"]

[dev-dependencies]
rayon = "1.0.0"
byteorder = "1.0.0"
