[package]
name = "scroll"
version = "0.11.0"
authors = ["m4b <m4b.github.io@gmail.com>", "Ted Mielczarek <ted@mielczarek.org>"]
readme = "README.md"
edition = "2021"
keywords = ["bytes", "endian", "immutable", "pread", "pwrite"]
repository = "https://github.com/m4b/scroll"
license = "MIT"
documentation = "https://docs.rs/scroll"
description = "A suite of powerful, extensible, generic, endian-aware Read/Write traits for byte buffers"

[dependencies]
scroll_derive = { version = "0.11", optional = true, path = "scroll_derive" }

[features]
default = ["std"]
std = []
derive = ["scroll_derive"]

[dev-dependencies]
rayon = "1"
byteorder = "1"
