[package]
name = "scroll_derive"
version = "0.10.0"
authors = ["m4b <m4b.github.io@gmail.com>", "Ted Mielczarek <ted@mielczarek.org>"]
readme = "README.md"
edition = "2018"
keywords = ["derive", "macros", "pread", "pwrite", "bytes"]
repository = "https://github.com/m4b/scroll_derive"
license = "MIT"
documentation = "https://docs.rs/scroll_derive"
description = "A macros 1.1 derive implementation for Pread and Pwrite traits from the scroll crate"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"
syn = "0.15"

[dev-dependencies.scroll]
version = "0.10"
path = ".."
